--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 *{
-   font-family: 'Nunito', sans-serif;s
+   font-family: 'Nunito', sans-serif;
    margin:0; padding:0;
    box-sizing: border-box;
    outline: none; border:none;
